--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -4,15 +4,34 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign Up</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="signup-container">
-    <h2>Create Account</h2>
-    <form action="/signup" method="POST">
-      <input type="text" name="name" placeholder="Full Name" required />
-      <input type="email" name="email" placeholder="Email" required />
-      <input type="password" name="password" placeholder="Password" required />
-      <button type="submit">Sign Up</button>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+  <div class="bg-white shadow-xl rounded-2xl p-8 w-full max-w-md">
+    <h2 class="text-2xl font-semibold text-center mb-6">Create Your PokéTrade Account</h2>
+    <form action="/signup" method="POST" class="space-y-5">
+      <div>
+        <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
+        <input id="name" name="name" type="text" required autofocus
+          class="mt-1 block w-full rounded-xl border-gray-300 shadow-sm focus:ring-pink-500 focus:border-pink-500" />
+      </div>
+
+      <div>
+        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+        <input id="email" name="email" type="email" required
+          class="mt-1 block w-full rounded-xl border-gray-300 shadow-sm focus:ring-pink-500 focus:border-pink-500" />
+      </div>
+
+      <div>
+        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+        <input id="password" name="password" type="password" required
+          class="mt-1 block w-full rounded-xl border-gray-300 shadow-sm focus:ring-pink-500 focus:border-pink-500" />
+      </div>
+
+      <button type="submit"
+        class="w-full py-2 px-4 bg-pink-600 hover:bg-pink-700 text-white font-semibold rounded-xl shadow transition">
+        Sign Up
+      </button>
     </form>
   </div>
 </body>
